More image alignment fixes

--- a/css/app.css
+++ b/css/app.css
@@ -330,11 +330,17 @@ main .navigation ol {
 	display: flex;
 	justify-content: center;
 }
-.site-content P a:has(> img.alignright) {
+.site-content p a:has(> img.alignright) {
+	float: right;
+}
+.site-content p img.alignright {
 	float: right;
 	margin-left: 1rem;
 }
-.site-content P a:has(> img.alignleft) {
+.site-content p a:has(> img.alignleft) {
+	float: left;
+}
+.site-content p img.alignleft {
 	float: left;
 	margin-right: 1rem;
 }
